<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.adrigala.test.zarapp.MainActivity"
    android:layout_width="match_parent">


    <Button
        android:text="@string/finalizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_end"
        tools:ignore="ButtonStyle,RelativeOverlap"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

    <Button
                android:text="@string/reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_reset"
        tools:ignore="ButtonStyle"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/paso_atr_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_back"
        tools:ignore="ButtonStyle"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/textview_grandes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/a_adir_caja_grande"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_grandes"
        android:onClick="onClickGrandes (MainActivity)"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/textView2" />

    <TextView
            android:text="@string/total_cajas_peque_as"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/a_adir_caja_peque_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_peque"
        android:onClick="onClickPeques (MainActivity)"
        android:layout_above="@+id/button_end"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2" />


</RelativeLayout>
